--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,1 +1,36 @@
-{{!-- main layout goes here --}}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PokeBuilderV2</title>
+    <!--tab icon-->
+    <link rel="icon" href="./assets/images/pikachu.png" />
+  <link rel="stylesheet" href="/stylesheets/style.css">
+   <!-- tailwind css link -->
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="mx-5">
+  <div>
+    <div class="container mx-auto items-center justify-center mt-8 lg:w-1/4">
+        <img class="" src="./assets/images/2560px-International_Pokémon_logo.svg.png" alt="pokemon-logo" />
+    </div>
+    <main class="text-center max-w-md container mx-auto items-center justify-center">
+        <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
+            <span class="block xl:inline text-yellow-400">Generate</span>
+            <span class="block text-blue-600 xl:inline">Pokemon!</span>
+        </h1>
+        <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+            Welcome to PokeBuilder! Search for any pokemon from any of the games. Create a team of 6 for your next play through!
+        </p>
+        {{!-- login.hbs and homepage.hbs will go here --}}
+      {{{ body }}}
+    </main>
+    <footer>
+    </footer>
+  </div>
+
+</body>
+
+</html>
