changed files from hbs to handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
     </div>
   </div>
 </form>
-
+{{!-- <script src="/javascript/login.js"></script> --}}
 {{!-- <form class="signup-form">
   <div>
     <label for="username-signup">username:</label>
@@ -30,4 +30,3 @@
   </div>
 </form> --}}
 {{!-- link to javascript for login/signup buttons --}}
-<script src="/javascript/login.js"></script>
