--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,29 +1,33 @@
-{{!-- main page for generating pokemon and building team --}}
+{{!-- login/signup form for user email and password --}}
 
-<form id="submitListener" class="mb-3">
-    <input type="text" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter the Pokemon name" required="" id="characterName" />
-    <div class="mb-3 sm:grid sm:grid-cols-3 sm:gap-2">
-        <div class="mt-3 sm:mt-0">
-            <button type="submit" class="w-full flex justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-black-900 bg-indigo-300 hover:bg-indigo-400 md:py-4 md:text-lg md:px-10" id="btnGenerate">
-              Generate
-            </button>
-        </div>
-        <div class="sm:order-first mt-3 sm:mt-0">
-            <button id="saveListener" type="button" href="#" class="w-full flex justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-black-800 bg-yellow-200 hover:bg-yellow-300 md:py-4 md:text-lg md:px-10" id="saveBtn">
-              Save
-            </button>
-        </div>
-        <div class="mt-3 sm:mt-0">
-            <button id="deleteListener" type="button" href="#" class="w-full flex justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-black-500 bg-red-400 hover:bg-red-500 md:py-4 md:text-lg md:px-10" id="deleteBtn">
-              Delete
-            </button>
-        </div>
+<form id="login-form" class="mb-3">
+    <input type="text" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter user email" required="" id="email-login" />
+    <input type="password" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter user password" required="" id="password-login" />
+  <div class="mb-3 sm:gap-2">
+    <div class="mt-3 sm:mt-0">
+    <button type="submit" class="w-full flex justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-black-900 bg-indigo-400 hover:bg-indigo-500 md:py-4 md:text-lg md:px-10" id="loginListener">
+        Login / Sign Up
+    </button>
     </div>
+  </div>
 </form>
-    {{!-- PokeMon data display card -- SHOULD WE MAKE THIS A PARTIAL? --}}
-<div id="invisible" class="mt-8 invisible max-w-md container mx-auto text-center justify-center">
-    <div id="pokeDetails" class="w-full font-bold text-xl mb-2"></div>
-    <ul id="abilities"></ul>
-    <img id="charcterImg" class="w-full" src="" alt="pokemom-logo" />
-</div>
-    {{!-- will need to connect homepage.js javascript for button interaction --}}
+<script src="/javascript/login.js"></script>
+
+{{!-- EXAMPLE BELOW - from just-tech-news --}}
+{{!-- <form class="signup-form">
+  <div>
+    <label for="username-signup">username:</label>
+    <input type="text" id="username-signup" />
+  </div>
+  <div>
+    <label for="email-signup">email:</label>
+    <input type="text" id="email-signup" />
+  </div>
+  <div>
+    <label for="password-signup">password:</label>
+    <input type="password" id="password-signup" />
+  </div>
+  <div>
+    <button type="submit">signup</button>
+  </div>
+</form> --}}
