generate/save working - file/folder cleanup

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 {{!-- login/signup form for user email and password --}}
 
-<form id="login-form" class="mb-3">
+<form id="login-form" class="sm:w-1/2 column text-center max-w-md container mx-auto items-center justify-center mb-3">
     <input type="text" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter user name" required="" id="username-login" />
     <input type="password" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter user password" required="" id="password-login" />
   <div class="mb-3 sm:gap-2">
