--- a/views/generate.handlebars
+++ b/views/generate.handlebars
@@ -1,9 +1,9 @@
 {{!-- main page for generating pokemon and building team --}}
-<form class="sm:w-1/2 column text-center max-w-md container mx-auto items-center justify-center mb-3">
+<form id="submitListener" class="sm:w-1/2 column text-center max-w-md container mx-auto items-center justify-center mb-3">
     <input type="text" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter the Pokemon name" required="" id="characterName" />
     <div class="mb-3 sm:gap-2">
         <div class="mt-3 sm:mt-0">
-            <button id="submitListener" type="button" class="w-full flex justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-black-900 bg-indigo-300 hover:bg-indigo-400 md:py-4 md:text-lg md:px-10" id="btnGenerate">
+            <button type="submit" class="w-full flex justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-black-900 bg-indigo-300 hover:bg-indigo-400 md:py-4 md:text-lg md:px-10" id="btnGenerate">
               Generate
             </button>
         </div>
