--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PokeBuilderV2</title>
     <!--tab icon-->
-    <link rel="icon" href="../../public/images/pikachu.png" />
+    <link rel="icon" href="../../public/images/happy-pikachu.gif" />
   <link rel="stylesheet" href="../../public/stylesheets/style.css">
    <!-- tailwind css link -->
     <script src="https://cdn.tailwindcss.com"></script>
