--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,8 +12,8 @@
   </div>
 </form>
 <form id="signup-form" class="sm:w-1/2 column text-center max-w-md container mx-auto items-center justify-center mb-3">
-    <input type="text" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter user name" required="" id="username-login" />
-    <input type="password" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter user password" required="" id="password-login" />
+    <input type="text" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter user name" required="" id="username-signup" />
+    <input type="password" class="shadow text-center appearance-none w-full my-3 py-2 px-3 text-gray-700 placeholder:italic" placeholder="Enter user password" required="" id="password-signup" />
   <div class="mb-3 sm:gap-2">
     <div class="mt-3 sm:mt-0">
     <button type="submit" class="w-full flex justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-black-900 bg-indigo-400 hover:bg-indigo-500 md:py-4 md:text-lg md:px-10">
