generate page route working trying to parse json to page too

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,9 @@
 <section>
 <h2>Your Pokemon Belt</h2>
-{{#each pokemon}}
-{{!-- need to figure out how to display each pokemon partial --}}
 </section>
+{{#each pokeId}}
+<p>
+{{> pokeId.id}}
+</p>
+{{/each}}
+
