--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,8 @@
             <span class="block text-blue-600 xl:inline">Pokemon!</span>
         </h1>
         <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-            Welcome to PokeBuilder! Search for any pokemon from any of the games. Create a team of 6 for your next play through!
+            Welcome to PokeBuilder! <br> 
+            Try searching for any pokemon from any of the games by name or number. Create a team of 6 for your next play through!
         </p>
         {{!-- login.hbs and homepage.hbs will go here --}}
     </main>
