--- a/views/generate.handlebars
+++ b/views/generate.handlebars
@@ -13,7 +13,9 @@
             </button>
         </div>
     </div>
+      <a href="/dashboard">Back to Dashboard</a>
 </form>
+
     {{!-- PokeMon data display card -- SHOULD WE MAKE THIS A PARTIAL? --}}
 <div id="invisible" class="mt-8 invisible max-w-md container mx-auto text-center justify-center">
     <div id="pokeDetails" class="w-full font-bold text-xl mb-2"></div>
