loggedin is working functionality is looking good pages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,8 +20,10 @@
   {{#if loggedIn}}
 <nav class="space-x-3">
   <a href="/generate">Generate Pokemon!</a>
+  <a href="/dashboard">My Dashboard</a>
   <button id="logout" class="btn-no-style">Logout</button>
   {{else}}
+  
   <button id="logout" class="btn-no-style"><a href="/">Logout</a></button>
   {{/if}}
 </nav>
