--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,6 +7,7 @@
 {{pokeId}}
 </p>
 <button value={{id}} class="deletelistener"> Remove From Team </button>
+<img id="pokeSprite" class="w-full" src='https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokedex}}.png' alt="pokemom-logo" />
 </div>
 {{/each}}
 
