--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,6 @@
   <title>PokeBuilderV2</title>
     <!--tab icon-->
     <link rel="icon" href="../../public/images/happy-pikachu.gif" />
-  <link rel="stylesheet" href="../../public/stylesheets/style.css">
    <!-- tailwind css link -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -19,12 +18,9 @@
 <nav>
   {{#if loggedIn}}
 <nav class="space-x-3">
-  <a href="/generate">Generate Pokemon!</a>
-  <a href="/dashboard">My Dashboard</a>
-  <button id="logout" class="btn-no-style">Logout</button>
-  {{else}}
-  
-  <button id="logout" class="btn-no-style"><a href="/">Logout</a></button>
+  <a class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded-full mt-3" href="/generate" id="generate-btn">Generate Pokemon!</a>
+  <a class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded-full mt-3" href="/dashboard" id="dashboard-btn">My Dashboard</a>
+  <button id="logout" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded-full mt-3">Logout</button>
   {{/if}}
 </nav>
   </header>
